// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Confirmation Modal > should render with custom title and description 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-lg"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl dim:border dim:border-theme-dim-800 dark:border dark:border-theme-dark-700 sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-3.5 rounded text-theme-secondary-700 transition-all duration-100 ease-linear hover:bg-theme-navy-200 hover:text-theme-navy-700 dim:text-theme-dim-200 dim:hover:bg-theme-dim-700 dim:hover:text-theme-dim-50 dark:text-theme-secondary-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 md:mr-6 md:mt-3.5"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-b border-theme-secondary-300 px-6 py-3.5 dim:border-theme-dim-700 dark:border-theme-dark-700"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-semibold leading-5 md:pt-0 md:text-lg text-theme-text"
            >
              My Title
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <svg
              class="mx-auto mb-6 max-w-52"
              viewBox="0 0 207 106"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M131.5 68.9l11.6-11.6c2.4-2.4 2.4-6.2 0-8.6l-35.3-35.3c-2.4-2.4-6.2-2.4-8.6 0L63.9 48.7c-2.4 2.4-2.4 6.2 0 8.6l35.3 35.3c2.4 2.4 6.2 2.4 8.6 0l12.4-12.4m6.7-6.8l-2.7 2.7"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M89.5 16.7l7.6-7.6c3.5-3.5 9.3-3.5 12.8 0l37.4 37.4c3.5 3.5 3.5 9.3 0 12.8l-37.4 37.4c-3.5 3.5-9.3 3.5-12.8 0L59.7 59.4c-3.5-3.5-3.5-9.3 0-12.8L73.3 33m13.2-13.2l-9.8 9.8"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M100.5 40.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6v13.9c0 2-1.6 3.6-3.6 3.6s-3.6-1.6-3.6-3.6V40.4zm0 25.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6-3.6-1.6-3.6-3.6z"
                fill="#F7FAFB"
                stroke="#212225"
                stroke-width="2"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7z"
                fill="#DBDEE5"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm103.8 0h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm-43 88h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm66 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-66h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm0 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7V8h7V1h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl mb-2"
            >
              <div
                class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dim:text-white dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="w-full break-words p-4 text-left text-sm leading-relaxed dim:bg-theme-dim-800 dim:text-theme-dim-50 dark:bg-theme-secondary-800 bg-theme-warning-50"
              >
                My Description
              </div>
            </div>
            <div
              class="modal-footer"
              data-testid="ConfirmationModal"
            >
              <div
                class="fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t border-theme-secondary-300 bg-theme-background px-8 py-3 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-dark-700 dark:bg-theme-dark-950 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dim:bg-transparent sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none [.modal-footer_&]:mt-4 [.modal-footer_&]:sm:-mx-6 [.modal-footer_&]:sm:border-t [.modal-footer_&]:sm:px-6 [.modal-footer_&]:sm:pt-4 pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Modal > should render with default title and description 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-lg"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl dim:border dim:border-theme-dim-800 dark:border dark:border-theme-dark-700 sm:mb-0 md:h-auto md:rounded-xl"
        data-testid="Modal__inner"
      >
        <div
          class="absolute right-0 top-0 z-10 mr-6 mt-3.5 rounded text-theme-secondary-700 transition-all duration-100 ease-linear hover:bg-theme-navy-200 hover:text-theme-navy-700 dim:text-theme-dim-200 dim:hover:bg-theme-dim-700 dim:hover:text-theme-dim-50 dark:text-theme-secondary-200 dark:hover:bg-theme-dark-700 dark:hover:text-theme-dark-50 md:mr-6 md:mt-3.5"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-b border-theme-secondary-300 px-6 py-3.5 dim:border-theme-dim-700 dark:border-theme-dark-700"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-semibold leading-5 md:pt-0 md:text-lg text-theme-text"
            >
              Confirmation
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <svg
              class="mx-auto mb-6 max-w-52"
              viewBox="0 0 207 106"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M131.5 68.9l11.6-11.6c2.4-2.4 2.4-6.2 0-8.6l-35.3-35.3c-2.4-2.4-6.2-2.4-8.6 0L63.9 48.7c-2.4 2.4-2.4 6.2 0 8.6l35.3 35.3c2.4 2.4 6.2 2.4 8.6 0l12.4-12.4m6.7-6.8l-2.7 2.7"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M89.5 16.7l7.6-7.6c3.5-3.5 9.3-3.5 12.8 0l37.4 37.4c3.5 3.5 3.5 9.3 0 12.8l-37.4 37.4c-3.5 3.5-9.3 3.5-12.8 0L59.7 59.4c-3.5-3.5-3.5-9.3 0-12.8L73.3 33m13.2-13.2l-9.8 9.8"
                fill="none"
                stroke="#FC9F0F"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M100.5 40.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6v13.9c0 2-1.6 3.6-3.6 3.6s-3.6-1.6-3.6-3.6V40.4zm0 25.4c0-2 1.6-3.6 3.6-3.6s3.6 1.6 3.6 3.6-1.6 3.6-3.6 3.6-3.6-1.6-3.6-3.6z"
                fill="#F7FAFB"
                stroke="#212225"
                stroke-width="2"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7z"
                fill="#DBDEE5"
              />
              <path
                d="M30.1 17h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm43 88h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm-66 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm22.5 0h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm0-66h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm0 22h2v-7h7v-2h-7v-7h-2v7h-7v2h7v7zm21.5-22h2v-7h7V8h-7V1h-2v7h-7v2h7v7zm103.8 0h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm-43 88h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm66 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-22.5 0h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm0-66h-2v-7h-7V8h7V1h2v7h7v2h-7v7zm0 22h-2v-7h-7v-2h7v-7h2v7h7v2h-7v7zm-21.5-22h-2v-7h-7V8h7V1h2v7h7v2h-7v7z"
                fill="#DBDEE5"
              />
            </svg>
            <div
              class="flex flex-col overflow-hidden rounded-xl mb-2"
            >
              <div
                class="flex items-center space-x-2 px-4 py-2 text-sm font-semibold dim:text-white dark:text-white bg-theme-warning-100 text-theme-warning-700 dark:bg-theme-warning-700"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="circle-exclamation-mark"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-width="2"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          r="9"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 10.5v-5"
                          stroke-linecap="round"
                          stroke-miterlimit="10"
                        />
                        <path
                          d="M10 14h0"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
                <span>
                  Warning
                </span>
              </div>
              <div
                class="w-full break-words p-4 text-left text-sm leading-relaxed dim:bg-theme-dim-800 dim:text-theme-dim-50 dark:bg-theme-secondary-800 bg-theme-warning-50"
              >
                Are you sure you wish to navigate away from this page without saving?
              </div>
            </div>
            <div
              class="modal-footer"
              data-testid="ConfirmationModal"
            >
              <div
                class="fixed inset-x-0 bottom-0 z-50 flex gap-3 border-t border-theme-secondary-300 bg-theme-background px-8 py-3 dim:border-theme-dim-700 dim:bg-theme-dim-950 dark:border-theme-dark-700 dark:bg-theme-dark-950 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none sm:dim:bg-transparent sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none [.modal-footer_&]:mt-4 [.modal-footer_&]:sm:-mx-6 [.modal-footer_&]:sm:border-t [.modal-footer_&]:sm:px-6 [.modal-footer_&]:sm:pt-4 pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-all duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 dim:bg-theme-navy-800"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
